downgraded to support 1.8-1.12.2 versions